fix: fix hover card and alignment

--- a/src/app/shared/components/inputs/boolean-input/boolean-input.component.scss
+++ b/src/app/shared/components/inputs/boolean-input/boolean-input.component.scss
@@ -13,6 +13,8 @@
 
   .label-text {
     font-size: 14px;
-    color: var(--text-color, #333);
+    color: var(--primary);
+    text-transform: capitalize;
+    margin-top: 4px;
   }
 }
